--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ h1, p{
     float: right;
 }
 
-#funtypes-input, #funtypes-output {
+#mlscript-input, #mlscript-output {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -50,12 +50,12 @@ h1, p{
     color: #efefef;
     font-size: 14px;
 }
-#funtypes-input {
+#mlscript-input {
     resize: none;
     outline: none;
 }
 
-#funtypes-output {
+#mlscript-output {
     border: 1px solid black;
 }
 
